<resources>
    <string name="app_name">DeliveryTestTask</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="cart">Корзина</string>
    <string name="account">Аккаунт</string>
    <string name="cityExample">Неизвестно</string>
    <string name="dateExample">01 января, 2023</string>
    <string name="categoryExample">Пекарни и кондитерские</string>
    <string name="checkInternetConnection">Проверьте соединение с интернетом</string>
    <string name="dishExample">Рататуй</string>
    <string name="tagExample">Все меню</string>
    <string name="costExample">799 ₽</string>
    <string name="weightExample">· 560г</string>
    <string name="descriptionExample">Рыба маринованная со специями, лимонным соком, соевым соусом и запечeнная в духовке с лучком, томатами и картошечкой под золотистой майонезно-сырной шубкой</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="pay">Оплатить</string>
    <string name="inDeveloping">В разработке...</string>
    <string name="sure">Понятно</string>
    <string name="moveToSettings">Перейти в настройки</string>
    <string name="turnGPS">Для корректной работы, требуется разрешить приложению доступ к местоположению.\nПожалуйста, нажмите \'разрешить\'.\nЛибо перейдите в настройки устройства и выдайте разрешение приложению.</string>
    <string name="pleaseSwipeToRefresh">Пожалуйста, проверьте интернет-соединение и обновите страницу</string>
</resources>