<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/home_navigation">

    <include app:graph="@navigation/home_navigation" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.zelspeno.deliverytesttask.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.zelspeno.deliverytesttask.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.zelspeno.deliverytesttask.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

</navigation>