<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainBackgroundColor">

                <FrameLayout
                    android:id="@+id/dialogDishImageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/dishCardBackgroundColor"
                        app:cardCornerRadius="15dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/dialogDishImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/dish_example"
                            android:adjustViewBounds="true"
                            android:scaleType="fitXY"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_margin="8dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:backgroundTint="@color/white"
                                app:cardCornerRadius="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_gravity="end">

                                <ImageView
                                    android:id="@+id/dialogDishFavorite"
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:scaleType="centerCrop"
                                    android:adjustViewBounds="true"
                                    android:layout_gravity="center"
                                    android:src="@drawable/heart"
                                    android:clickable="true"
                                    android:focusable="true"/>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:backgroundTint="@color/white"
                                app:cardCornerRadius="8dp"
                                android:layout_gravity="end">

                                <ImageView
                                    android:id="@+id/dialogDishClose"
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:scaleType="centerCrop"
                                    android:adjustViewBounds="true"
                                    android:layout_gravity="center"
                                    android:src="@drawable/close"
                                    android:clickable="true"
                                    android:focusable="true"/>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <TextView
                    android:id="@+id/dialogDishName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:text="@string/dishExample"
                    android:textColor="@color/mainTextColor"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/dishDialogNameTextSize"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/dialogDishImageContainer"
                    app:layout_constraintStart_toStartOf="@id/dialogDishImageContainer"
                    app:layout_constraintEnd_toEndOf="@id/dialogDishImageContainer"/>

                <TextView
                    android:id="@+id/dialogDishCost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/costExample"
                    android:textColor="@color/mainTextColor"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/dishDialogBodyTextSize"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/dialogDishName"
                    app:layout_constraintStart_toStartOf="@id/dialogDishName" />

                <TextView
                    android:id="@+id/dialogDishWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/weightExample"
                    android:textColor="@color/mainTextColor"
                    android:alpha="0.4"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/dishDialogBodyTextSize"
                    android:layout_marginStart="4dp"
                    app:layout_constraintTop_toTopOf="@id/dialogDishCost"
                    app:layout_constraintStart_toEndOf="@id/dialogDishCost" />

                <TextView
                    android:id="@+id/dialogDishDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/descriptionExample"
                    android:textColor="@color/mainTextColor"
                    android:alpha="0.65"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/dishDialogBodyTextSize"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:scrollbars="vertical"
                    app:layout_constraintTop_toBottomOf="@id/dialogDishCost"
                    app:layout_constraintStart_toStartOf="@id/dialogDishCost"
                    app:layout_constraintEnd_toEndOf="@id/dialogDishImageContainer"
                    app:layout_constraintBottom_toTopOf="@id/dialogDishAddToCart"/>

                <Button
                    android:id="@+id/dialogDishAddToCart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addToCart"
                    android:background="@drawable/clicked_tag_style"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:textSize="@dimen/dishDialogButtonTextSize"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintStart_toStartOf="@id/dialogDishImageContainer"
                    app:layout_constraintEnd_toEndOf="@id/dialogDishImageContainer"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>