<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/mainBackgroundColor"
        app:elevation="8dp"
        android:elevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/homeLocationImage"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/location"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/homeUserCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/cityExample"
                android:textColor="@color/mainTextColor"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textSize="@dimen/topBarHeaderTextSize"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toEndOf="@id/homeLocationImage"
                app:layout_constraintTop_toTopOf="@id/homeLocationImage"
                app:layout_constraintBottom_toBottomOf="@id/homeLocationImage"/>

            <TextView
                android:id="@+id/homeUserDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/dateExample"
                android:textColor="@color/mainTextColor"
                android:alpha="0.5"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textSize="@dimen/topBarBodyTextSize"
                app:layout_constraintStart_toStartOf="@id/homeUserCity"
                app:layout_constraintTop_toBottomOf="@id/homeUserCity" />

            <androidx.cardview.widget.CardView
                android:id="@+id/homeUserPhotoContainer"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/homeUserPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/profile_photo" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/homeSwipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/homeRecyclerViewNotFound"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sf_pro_display_medium"
                android:textColor="@color/mainTextColor"
                android:text="@string/pleaseSwipeToRefresh"
                android:gravity="center"
                android:visibility="invisible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/homeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/home_recyclerview_item" />

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>