<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cartRVImageContainer"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/cartRVImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@color/dishCardBackgroundColor"
            android:src="@drawable/dish_example" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartRVFeaturesContainer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/cartRVImageContainer"
        app:layout_constraintStart_toEndOf="@id/cartRVImageContainer"
        app:layout_constraintBottom_toBottomOf="@id/cartRVImageContainer">

        <TextView
            android:id="@+id/cartRVName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/dishExample"
            android:textColor="@color/mainTextColor"
            android:textAlignment="textStart"
            android:textSize="@dimen/dishNameCardTextSize"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cartRVCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/costExample"
            android:textColor="@color/mainTextColor"
            android:textAlignment="textStart"
            android:textSize="@dimen/dishDialogBodyTextSize"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/cartRVName"
            app:layout_constraintStart_toStartOf="@id/cartRVName" />

        <TextView
            android:id="@+id/cartRVWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/weightExample"
            android:textColor="@color/mainTextColor"
            android:alpha="0.4"
            android:textAlignment="textStart"
            android:textSize="@dimen/dishDialogBodyTextSize"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/cartRVCost"
            app:layout_constraintStart_toEndOf="@id/cartRVCost" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/addDeletePanelBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_gravity="end">

            <ImageView
                android:id="@+id/cartPlus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/plus"
                app:layout_constraintStart_toEndOf="@id/cartCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cartCount"
                app:layout_constraintBottom_toBottomOf="@id/cartCount"/>

            <TextView
                android:id="@+id/cartCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="1"
                android:textColor="@color/mainTextColor"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/dishDialogBodyTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/cartMinus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/minus"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cartCount"
                app:layout_constraintTop_toTopOf="@id/cartCount"
                app:layout_constraintBottom_toBottomOf="@id/cartCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>